# mcp_evaluation

./: .gitignore  README.md  __init__.py  agent.py  config.py  evaluation.xml  evaluator.py  main.py  mcp_setup.py  models.py  pyproject.toml  reporting.py  utils.py  xml_parser.py
results/: raw_audit_data.json  raw_audit_data_flattened.csv  raw_audit_data_report.md
